[metadata]
name = seg-torchutils
version = 0.0.0
author = Kevin N. Dietrich
author_email = kenichdietrich@protonmail.com
description = Utils for segmentation tasks in pyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kenichdietrich/seg-torchutils/
license = file LICENSE

[options]
packages = find:
python_requires = >= 3.8.3
install_requires =
    numpy >= 1.19.5
    opencv-python >= 4.4.0.44
    Pillow >= 8.1.2
    matplotlib >= 3.2.1
    torch >= 1.10.1
    torchvision >= 0.11.2
    tqdm >= 4.46.1